# public_hosted_files

./: README.md
ebflow/: pyproject.toml
ebflow/ebflow/analytics/: analytics.py  custom_steps.py  evaluate_groupings.py  inflow_functions.py
ebflow/ebflow/analytics/dqs/: coa_dqs.py  tb_dqs.py
ebflow/ebflow/extract/: file_manager.py
ebflow/ebflow/transform/: create_grouped_report.py
ebflow/ebflow/utils/: custom_steps.py  utils.py
ebflow/tests/test_analytics/data/: inflow_trial_balance.csv
ebflow/tests/test_analytics/test_dna/: test_compare.py  test_dna.py  test_dna_backdating.py  test_dna_group_by.py  test_non_working_days.py  test_outside_working_hours.py
ebflow/tests/test_analytics/test_dna/data/: backdating.csv  backdating_2.csv  backdating_with_null.csv  compare_2.csv  compare_set_1.csv  dna_test_file_duplicate.csv  filter_data.csv  mc_function.csv  mc_function_2.csv  net_function_calc.csv  (+2 more)
ebflow/tests/test_analytics/test_dqs/: test_coa_dqs.py
ebflow/tests/test_extract/: test_file_checks.py  test_file_manager.py
ebflow/tests/test_extract/data/: date_time.csv  gld_mperfect.csv  sage200.yml  table_details_for_test_data.py
ebflow/tests/test_transform/data/: cdm_mapping_for_test_files.py  tb_data.csv
ebflow/tests/test_utils/: test_conditional_columns.py
frictionless_azureblob/: README.md  pyproject.toml
frictionless_azureblob/frictionless_azureblob/: __init__.py  control.py  plugin.py  settings.py
frictionless_azureblob/frictionless_azureblob/loaders/: __init__.py  azure_blob.py
frictionless_azureblob/tests/: test_azure_loader.py
(+47 files in other folders)
