[tool.poetry]
name = "ebflow"
version = "0.3.7"
description = ""
authors = ["sumanta90"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.5.3"
openpyxl = "^3.1.1"
jsonlines = "^4.0.0"
azure-storage-blob = "^12.19.0"
azure-identity = "^1.15.0"
networkx = "3.2.1"
matplotlib = "3.8.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
